--- a/meta/main.yml
+++ b/meta/main.yml
@@ -1,6 +1,6 @@
 galaxy_info:
   author: Damien "UndeadWoody" Bellamy
-  description: [¬º-°]¬
+  description: "[¬º-°]¬"
 
   # If the issue tracker for your role is not on github, uncomment the
   # next line and provide a value
